fix(ui): profile  | user image alignment.

--- a/pages/profile/style.scss
+++ b/pages/profile/style.scss
@@ -19,6 +19,8 @@
       overflow: hidden;
 
       figure {
+        display: flex;
+        justify-content: center;
         height: 100%;
 
         img {
